--- a/myAPK/platforms/android/app/src/main/res/xml/config.xml
+++ b/myAPK/platforms/android/app/src/main/res/xml/config.xml
@@ -16,6 +16,7 @@
     </author>
     <content src="index.html" />
     <access origin="*" />
+    <allow-navigation href="*" />
     <allow-intent href="http://*/*" />
     <allow-intent href="https://*/*" />
     <allow-intent href="tel:*" />
@@ -24,4 +25,5 @@
     <allow-intent href="geo:*" />
     <allow-intent href="market:*" />
     <preference name="loglevel" value="DEBUG" />
+    <preference name="android-targetSdkVersion" value="28" />
 </widget>
