--- a/myAPK/platforms/android/app/src/main/res/xml/config.xml
+++ b/myAPK/platforms/android/app/src/main/res/xml/config.xml
@@ -7,12 +7,12 @@
     <feature name="InAppBrowser">
         <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser" />
     </feature>
-    <name>HelloCordova</name>
+    <name>Mercadinho Delivery</name>
     <description>
-        A sample Apache Cordova application that responds to the deviceready event.
+        Deixe que o app vá ao mercado para você.
     </description>
     <author email="dev@cordova.apache.org" href="http://cordova.io">
-        Apache Cordova Team
+        Sérgio Lima, desennvolvimento de sites e aplicativos
     </author>
     <content src="index.html" />
     <access origin="*" />
@@ -23,6 +23,7 @@
     <allow-intent href="sms:*" />
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
+    <icon src="www/icon.png" />
     <allow-intent href="market:*" />
     <preference name="loglevel" value="DEBUG" />
     <preference name="android-targetSdkVersion" value="28" />
