--- a/package/meradinhodelivery/platforms/android/app/src/main/res/xml/config.xml
+++ b/package/meradinhodelivery/platforms/android/app/src/main/res/xml/config.xml
@@ -25,4 +25,5 @@
     <allow-intent href="geo:*" />
     <allow-intent href="market:*" />
     <preference name="loglevel" value="DEBUG" />
+    <preference name="android-targetSdkVersion" value="28" />
 </widget>
